<resources>
    <string name="app_name">Proyek 3</string>
    <string name="action_settings">Settings</string>
    <string name="list_title">Daftar Teman</string>
    <string name="list_kosong">Belum ada data teman</string>
    <string name="activity_tambah_judul">Tambah Data Teman</string>
    <string name="activity_tambah_hintNama">Nama</string>
    <string name="activity_tambah_hintAlamat">Alamat</string>
    <string name="activity_tambah_lblButton_tambah">Tambah</string>
    <string name="activity_tambah_lblButton_batal">Batal</string>
    <string name="title_activity_detail">Data Teman</string>
</resources>
